--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2,7 +2,10 @@
 
 @font-face {
 	font-family: "SideBar_Inter";
-	src: url("/fonts/Inter/Inter-VariableFont.ttf") format("truetype"),
+	src: url("/fonts/Inter/Inter-VariableFont.ttf") format("truetype");
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
 }
 
 
@@ -114,10 +117,8 @@ table table {
 }
 
 .SideBarContainer {
-	border-right: 1px solid #2e2e32;
 	background-color: rgba(26, 18, 36, 0.01);
 	position: sticky;
-	top: 0;
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -125,12 +126,48 @@ table table {
 	overflow-y: auto;
 	overflow-x: hidden;
 	min-width: max-content;
+
+
 }
+
+.SideBarContainer::-webkit-scrollbar {
+	width: 3px;
+
+}
+
+.SideBarContainer::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px rgb(45, 51, 68);
+	border-radius: 10px;
+}
+
+.SideBarContainer::-webkit-scrollbar-thumb {
+	background: rgb(0, 114, 198);;
+	border-radius: 10px;
+}
+
+
+.MainContentContainer::-webkit-scrollbar {
+	width: 5px;
+
+}
+
+.MainContentContainer::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px rgb(45, 51, 68);
+	border-radius: 10px;
+}
+
+.MainContentContainer::-webkit-scrollbar-thumb {
+	background: rgb(0, 114, 198);;
+	border-radius: 10px;
+}
+
+
+
 
 .SideBarTopArea {
 	display: flex;
 	flex-direction: column;
-	padding: 10px 10px 10px 10px;
+	padding: 10px;
 	text-align: left;
 }
 
@@ -145,6 +182,7 @@ table table {
 	text-align: center;
 	border-top: 1px solid #2e2e32;
 }
+
 
 .MainContentContainer {
 	display: flex;
@@ -190,14 +228,7 @@ table table {
 	height: 100%;
 	display: flex;
 	justify-content: center;
-	/* Center horizontally */
 	align-items: center;
-	/* Center vertically */
-}
-
-
-table {
-	margin-top: 20px;
 }
 
 .InnerMainContentContainerForPlayerTable {
@@ -261,13 +292,13 @@ table {
 
 .MainContentFooterContainerRow {
 	display: flex;
-	flex:1;
+	flex: 1;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
 	width: 100%;
-	min-height: 100px;
+	min-height: 50px;
 }
 
 .MainContentFooterContent {
@@ -277,31 +308,34 @@ table {
 	align-items: center;
 	width: 50%;
 	flex-wrap: wrap;
+	font-weight: 300;
+	font-family: 'SideBar_Inter', sans-serif;
+	font-size: 18px;
+	margin: 0;
 
 }
 
 .ButtonAndContentWrapper {
 	pointer-events: none;
-	padding-top: 50px;
+	padding-top: 0px;
 	position: absolute;
 	z-index: 999;
 }
 
 .OpenCloseBtn {
- 	pointer-events: auto;
+	pointer-events: auto;
 	color: white;
 	cursor: pointer;
 }
 
 .SideBarNavLinks {
-	color: rgb(0, 0, 0);
 	cursor: pointer;
 	width: 100%;
 	text-align: left;
 	font-size: 22px;
 	font-family: 'Times New Roman', Times, serif;
 	font-weight: bold;
-	padding-top: 25px;
+	padding-top: 30px;
 	text-decoration: none;
 	align-items: center;
 }
@@ -331,9 +365,7 @@ footer {
 	width: 100%;
 	text-align: left;
 	font-size: 22px;
-	font-family: 'Times New Roman', Times, serif;
 	font-weight: bold;
-
 }
 
 .panel {
@@ -345,12 +377,10 @@ footer {
 }
 
 .ViewLinkContainer {
-	padding-top: 25px;
+	padding-top: 30px;
 }
 
 .IconTextHContainer {
-		font-family: 'SideBar_Inter', sans-serif;
-	font-style: normal;
 	display: flex;
 	width: 100%;
 	align-items: center;
@@ -363,9 +393,27 @@ footer {
 }
 
 .SideBarLinkText {
+	padding: 0;
+	margin: 0;
+	font-family: 'SideBar_Inter', sans-serif;
+	font-style: normal;
 	padding-left: 10px;
+
 }
 
+
+.FallGodsLogoText {
+	font-family: 'SideBar_Inter', sans-serif;
+	font-style: normal;
+	padding-left: 10px;
+	font-weight: bold;
+	font-size: 32px;
+	justify-content: center;
+	justify-items: center;
+	align-items: center;
+	color: rgb(249, 252, 255);
+ text-shadow: 2px 2px black;
+}
 
 :root {
 	--SideBar-text-Clicked-color-Light: #000;
@@ -375,5 +423,6 @@ footer {
 	color: var(--SideBar-text-Clicked-color-Light) !important;
 }
 
-.IsHidden {display: none;
+.IsHidden {
+	display: none;
 }
